syntax = "proto3";


package tool_cluster.v4;

// Идентификаторы rpc
enum ServiceSource {
  // Невалидное значение.
  SERVICE_SOURCE_UNSPECIFIED = 0;
  // Реализация управления и сбора с BMC.
  SERVICE_SOURCE_BMC_MANAGER = 1;
  // Реализация управления и сбора с linux-хостов.
  SERVICE_SOURCE_LINUX_MANAGER = 2;
  // Реализация управления и сбора с windows-хостов.
  SERVICE_SOURCE_WINDOWS_MANAGER = 3;
  // Реализация управления и сбора с гипервизоров.
  SERVICE_SOURCE_HYPERVISOR_MANAGER = 4;
  // Реализация шаблонного мониторинга.
  SERVICE_SOURCE_TEMPLATE_MANAGER = 5;
}
